# bitlang

./: README.md  setup.cfg
src/bitlang/: main.py
src/bitlang.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
