[project]
name = "bitlang"
version = "0.0.1"
authors = [
  { name="kingking", email="kingking1223@gmail.com" }
]description = "Interperater for a turing-complete language I made named bitlang."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]